--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -471,3 +471,37 @@ year = {2015}
   note = {Accessed: 2020-01-07}
 }
 
+@misc{PanteaKarimi2019,
+  author = {Pantea Karimi},
+  title = {{Analysis of triangle inequality}},
+  howpublished = {Summer Project, DEDIS Github},
+  note = {Not published yet}
+}
+
+@misc{ArnaudPannatier2019,
+  author = {Arnaud Pannatier},
+  title = {{Draft of Adaptative Control Plane}},
+  howpublished = {Google Doc,\url{https://docs.google.com/document/d/1aqDpgke30azul8EJbQ8GcVqCQWodkmVoDHp1xzCMMIQ}},
+}
+
+@misc{ArnaudPannatierWorks2019,
+  author = {Arnaud Pannatier},
+  title = {{README, listing the different drafts on the control plane}},
+  howpublished = {DEDIS Github, \url{https://github.com/dedis/student_19_nyleCtrlPlane/blob/master/README.md}},
+}
+@article{Lumezanu2009,
+abstract = {Triangle inequality violations (TIVs) are the effect of packets between two nodes being routed on the longer direct path between them when a shorter detour path through an intermediary is available. TIVs are a natural, widespread and persistent consequence of Internet routing policies. By exposing opportunities to improve the delay between two nodes, TIVs can help myriad applications that seek to minimize end-to-end latency. However, sending traffic along the detour paths revealed by TIVs may influence Internet routing negatively. In this paper we study the interaction between triangle inequality violations and policy routing in the Internet. We use measured and predicted AS paths between Internet nodes to show that 25{\%} of the detour paths exposed by TIVs are in fact available to BGP but are simply deemed "less efficient". We also compare the AS paths of detours and direct paths and find that detours use AS edges that are rarely followed by default Internet paths, while avoiding others that BGP seems to prefer. Our study is important both for understanding the various interactions that occur at the routing layer as well as their effects on applications that seek to use TIVs to minimize latency.},
+author = {Lumezanu, Cristian and Baden, Randy and Spring, Neil and Bhattacharje, Bobbye},
+doi = {10.1007/978-3-642-00975-4_5},
+file = {:Users/arnaudpannatier/Documents/EPFL/Master{\_}Thesis{\_}side{\_}repo/bibliography/pam09.pdf:pdf},
+isbn = {9783642009747},
+issn = {03029743},
+journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+pages = {45--54},
+title = {{Triangle Inequality and routing policy violations in the internet}},
+volume = {5448},
+year = {2009}
+}
+
+
+
